--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,5 @@ Testing
 .idea
 
 # clion cmake builds
-cmake-build-debug
-cmake-build-release
-cmake-build-relwithdebinfo
-packaging/Output/*
+cmake-build-*
+packaging/Output/*z
