--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = modules/clap-juce-extensions
 	url = https://github.com/free-audio/clap-juce-extensions.git
 	branch = main
+[submodule "boost"]
+	path = boost
+	url = https://github.com/boostorg/boost.git
